# Halide

./: .gitignore  Makefile
apps/: .gitignore
cmake/: toolchain.linux-x64-fuzzer.cmake
paper_scripts/: 0822-train-only-one-app.py  clean.sh  clean_non_unique_samples.py  combine_single_stage_predictions.py  compute_rating.py  copy_samples_from_sensei_fs.py  exclude_pipelines.py  find_bad_predictions.py  find_similar_samples.py  generate_autotune_results.sh  generate_autotune_results_trace.sh  generate_one_shot_figures.py  generate_r2_on_training_set.py  generate_random_pipelines.sh  generate_training_loss_figures.py  generate_weights_hold_one_out.py  get_features_from_sample.py  get_zero_predictions.py  load_sample.py  make_partition.py  parse_samples.py  parse_unique_samples.py  plot_all.py  plot_pipeline_stages_histogram.py  plot_training_log.py  plot_training_r2.py  predict_all.sh  predict_unique.sh  run.py  run.sh  run_bench_diff.py  scatter.py  scatter_with_errors.py  scatter_with_ranges.py  set_events.py  train_all.sh  train_unique.sh  transform_unique_samples_txt.py  utils.sh
pipeline_printer/: CMakeLists.txt  main.cpp
profiler_scripts/: collect_compile_log.py  collect_trace_counters.py  common.py  parse_autotune_log.py  plot_app.py
random_pipeline_output/: random_pipeline_0.hlpipe  random_pipeline_1.hlpipe  random_pipeline_10.hlpipe  random_pipeline_11.hlpipe  random_pipeline_12.hlpipe  random_pipeline_13.hlpipe  random_pipeline_14.hlpipe  random_pipeline_15.hlpipe  random_pipeline_2.hlpipe  random_pipeline_3.hlpipe  random_pipeline_4.hlpipe  random_pipeline_5.hlpipe  random_pipeline_6.hlpipe  random_pipeline_7.hlpipe  random_pipeline_8.hlpipe  random_pipeline_9.hlpipe
src/: CMakeLists.txt  Func.cpp  Profiling.cpp  Schedule.cpp  Schedule.h  ScheduleMutator.cpp  ScheduleMutator.h  Serialization.cpp  Util.cpp  Util.h
test/: CMakeLists.txt
test/libfuzzer/: CMakeLists.txt  compute_valid_rate.py  fuzzer_baseline.cpp  fuzzer_mutator.cpp  fuzzer_utils.h  fuzzer_valid.cpp
tools/: RunGen.h
training_scripts/: aggregate_runtime.py  bilateral_DAG.txt  feature_ordering.txt  generate_scatter_data_with_errors.py  manual_benchmark.py  parse_runtime.py  rebenchmark.py  run_benmarked_featurization.py  run_full_featurization.py
util/: CMakeLists.txt  HalideTraceCounter.cpp
(+61 files in other folders)
